ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/ia_Engagement_Type_Asset__c.object-meta.xml
<CustomObject>
    <description>IA Asset referenced by an Engagement Type, Phase and/or Deliverable.</description>
    <label>Engagement Type Asset</label>
    <nameField>
        <displayFormat>ETA-{00000}</displayFormat>
        <label>ETA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Type Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>