ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deliverable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Phase__c</field>
            <operation>equals</operation>
            <valueField>ia_Deliverable__c.Phase__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ia_Deliverable__c</referenceTo>
    <relationshipName>Engagement_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>