ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Type</label>
    <referenceTo>ia_Engagement_Type__c</referenceTo>
    <relationshipName>Engagement_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>