ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/fields/IA_Asset__c.field-meta.xml
<CustomField>
    <fullName>IA_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>ia_Asset__c</referenceTo>
    <relationshipName>Engagement_Asset</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>