ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <inlineHelpText>Select the project type this asset is limited to.  If it applies to all types, leave blank.</inlineHelpText>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ia_Implementation_Type</valueSetName>
    </valueSet>
</CustomField>