ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal only asset</description>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>