ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Engagement_Type__c</field>
            <operation>equals</operation>
            <valueField>ia_Phase__c.Engagement_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ia_Phase__c</referenceTo>
    <relationshipName>Engagement_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>