ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/fields/Project_Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Project_Managed_By__c</fullName>
    <inlineHelpText>Select the project leadership type this asset is limited to.  If it applies to all types, leave blank.</inlineHelpText>
    <label>Project Managed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ia_Project_Management</valueSetName>
    </valueSet>
</CustomField>