ConsultingHub/force-app/main/default/objects/ia_Engagement_Type_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Domain__c</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Internal__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>